src/test/deca/context/valid/test_opcmp_int_float.deca
// Description:
//    operation de comparaison reussi
//
// Resultats:
//    state = true
//
// Historique:
//    cree le 01/01/2024

{
   boolean state = (1.0 != 0) ;
}
