src/test/deca/context/invalid/wobj/test_opcmp_string.deca
// Description:
//    Declaration
//
// Resultats:
//    Ligne 11: operation de comparaison impossible avec ces types
//
// Historique:
//    cree le 01/01/2024

{
   boolean state = 1 < "zero" ;
}
